--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -12,21 +12,22 @@
     <Style x:Key="CheckBoxPlain" TargetType="CheckBox" BasedOn="{StaticResource CheckBoxBase}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckOk}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
-        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Self}, Path=Background}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM1}"/>
         
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
-                    <BulletDecorator Background="Transparent">
+                    <BulletDecorator Background="Aqua" SnapsToDevicePixels="True">
                         <BulletDecorator.Bullet>
                             <Border x:Name="Border" 
-                                            Width="16" 
-                                            Height="16" 
-                                            CornerRadius="{DynamicResource RscRoundTiny}" 
-                                            Background="{TemplateBinding Background}"
-                                            BorderThickness="1"
-                                            BorderBrush="{TemplateBinding Background}">
-                                <Image x:Name="CheckMark" Style="{TemplateBinding Tag}"></Image>
+                                    BorderBrush="{TemplateBinding Background}"
+                                    Background="{TemplateBinding Background}"
+                                    BorderThickness="1"
+                                    Width="16" 
+                                    Height="16" 
+                                    Margin="2"
+                                    CornerRadius="{DynamicResource RscRoundTiny}">
+                                <Image x:Name="CheckMark" Style="{TemplateBinding Tag}"/>
                             </Border>
                         </BulletDecorator.Bullet>
                         <ContentPresenter Margin="5,0,0,0"
