--- a/Views/Demo/CheckBoxView.xaml
+++ b/Views/Demo/CheckBoxView.xaml
@@ -9,7 +9,7 @@
         <StackPanel>
             <!-- Plain -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <CheckBox>Test</CheckBox>
+                <CheckBox Width="150" Margin="5 0 5 5">Test</CheckBox>
             </StackPanel>
         </StackPanel>
         
