--- a/Themes/Img/Base/Ui/check.xaml
+++ b/Themes/Img/Base/Ui/check.xaml
@@ -3,7 +3,7 @@
     
     <!-- Geometry -->
     <Geometry x:Key="GeoCheck">M64,15.5 28.9,50.6 28.9,50.6 22.9,56.6 0,33.8 8.2,25.6 22.9,40.3 55.8,7.4</Geometry>
-    <Geometry x:Key="GeoCheckIndeterminate">M64,64</Geometry>
+    <Geometry x:Key="GeoCheckIndeterminate">M54,0H10C4.5,0,0,4.5,0,10V54c0,5.5,4.5,10,10,10H54c5.5,0,10-4.5,10-10V10C64,4.5,59.5,0,54,0z</Geometry>
     
     <!-- Ckeck -->
     <Style x:Key="ImgCheckM1" TargetType="Image">
