--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -57,8 +57,8 @@
                         </Trigger>
                         
                         <Trigger Property="IsChecked" Value="{x:Null}">
-                            <Setter TargetName="CheckMark" Property="Style" Value="{StaticResource ImgCheckIndeterminateM3}" />
-                            <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource RgbOk}"/>
+                            <Setter TargetName="Border" Property="Background" Value="Transparent"/>
+                            <Setter TargetName="CheckMark" Property="Style" Value="{StaticResource ImgCheckIndeterminateM2}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
