ajout des 5 couleurs checkbox

--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -67,6 +67,36 @@
     </Style>
     
     <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}"/>
+    
+    <Style x:Key="CheckBoxPlainM1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
+        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="CheckBoxPlainM2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
+        <Setter Property="Background" Value="{StaticResource RgbM2}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
+    </Style>
+    
+    <Style x:Key="CheckBoxPlainM3" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
+        <Setter Property="Background" Value="{StaticResource RgbM3}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="CheckBoxPlainB1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
+        <Setter Property="Background" Value="{StaticResource RgbB1}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
+    </Style>
+    
+    <Style x:Key="CheckBoxPlainB2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
+        <Setter Property="Background" Value="{StaticResource RgbB2}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
+    </Style>
     <!-- /Plain -->
     
     
