--- a/Views/Demo/CheckBoxView.xaml
+++ b/Views/Demo/CheckBoxView.xaml
@@ -15,6 +15,15 @@
                 <CheckBox Style="{StaticResource CheckBoxPlainB1}" Width="150" Margin="5 0 5 5">BoxPlainB1</CheckBox>
                 <CheckBox Style="{StaticResource CheckBoxPlainB2}" Width="150" Margin="5 0 5 5">BoxPlainB2</CheckBox>
             </StackPanel>
+            
+            <!-- Plain 3 States -->
+            <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
+                <CheckBox Style="{StaticResource CheckBox3SPlainM1}" Width="150" Margin="5 0 5 5">Box3SPlainM1</CheckBox>
+                <CheckBox Style="{StaticResource CheckBox3SPlainM2}" Width="150" Margin="5 0 5 5">Box3SPlainM2</CheckBox>
+                <CheckBox Style="{StaticResource CheckBox3SPlainM3}" Width="150" Margin="5 0 5 5">Box3SPlainM3</CheckBox>
+                <CheckBox Style="{StaticResource CheckBox3SPlainB1}" Width="150" Margin="5 0 5 5">Box3SPlainB1</CheckBox>
+                <CheckBox Style="{StaticResource CheckBox3SPlainB2}" Width="150" Margin="5 0 5 5">Box3SPlainB2</CheckBox>
+            </StackPanel>
         </StackPanel>
         
     </Grid>
